add section price list

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -21,7 +21,9 @@ const color = "black";
         align-items: center;
         column-gap: calc( 2 * var(--flex-gap-min));
         margin-top: var(--header-top);
-        margin-bottom: clamp(1.25rem, -3.5968rem + 10.1106vw, 5.25rem); /*767 - 20px 1400px - 84px*/
+        margin-bottom: 84px;
+        /* margin-bottom: clamp(1.25rem, -3.5968rem + 10.1106vw, 5.25rem);  */
+        /*767 - 20px 1400px - 84px*/
     }
 
     @media screen and (max-width: 1199.98px) {
