--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Header from "../components/Header.astro";
 import Hero from "../components/Hero.astro";
 import About from '../components/About.astro';
 import Servises from '../components/Servises.astro';
+import Price from "../components/Price.astro";
 import Contacts from "../components/Contacts.astro";
 import Footer from "../components/Footer.astro";
 
@@ -16,10 +17,11 @@ import Footer from "../components/Footer.astro";
     description = "Transform your confidence at SIRENE Beauty Salon in Illinois, specializing in individual eyelash and hair extensions. Experience personalized beauty services that enhance your unique image. Change your look and be unsurpassed!">
     <Header/>
      <main class="container">
-        <Hero/>
-        <About/>
+        <!-- <Hero/>
+        <About/> -->
         <Servises/>
-        <Contacts/>
+        <Price/>
+        <!-- <Contacts/> -->
      </main>
     <Footer/>
 </Layout>
