--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,11 +17,11 @@ import Footer from "../components/Footer.astro";
     description = "Transform your confidence at SIRENE Beauty Salon in Illinois, specializing in individual eyelash and hair extensions. Experience personalized beauty services that enhance your unique image. Change your look and be unsurpassed!">
     <Header/>
      <main class="container">
-        <!-- <Hero/>
-        <About/> -->
+        <Hero/>
+        <About/>
         <Servises/>
         <Price/>
-        <!-- <Contacts/> -->
+        <Contacts/>
      </main>
     <Footer/>
 </Layout>
