--- a/src/components/Price.astro
+++ b/src/components/Price.astro
@@ -8,7 +8,7 @@
   </div>
 </section>
 <script>
-  let pricelist = "/src/components/assets/price-list/price-list.json";
+  let pricelist = "../components/assets/price-list/price-list.json";
   fetch(pricelist)
     .then((response) => {
       if (!response.ok) {
