--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,8 +18,8 @@ const { title, author, description } = Astro.props;
 		<meta name="copyright" content={author}>
 		<title>{title}</title>
 		<meta name="description" content={description} />		
-		<link rel="stylesheet" href="../styles/normalize.css">
-		<link rel="stylesheet" href="../styles/fonts.css">
+		<!-- <link rel="stylesheet" href="../styles/normalize.css">
+		<link rel="stylesheet" href="../styles/fonts.css"> -->
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 	</head>
 	<body style="font-family: Roboto, Tahoma, Geneva, Kalimati, sans-serif">
