--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,6 @@
 ---
+import "../styles/normalize.css";
+import "../styles/fonts.css";
 import "../styles/global.css";
 import Layout from '../layouts/Layout.astro';
 import Header from "../components/Header.astro";
