--- a/src/components/Price.astro
+++ b/src/components/Price.astro
@@ -1,15 +1,13 @@
 ---
+
 ---
 
 <section id="price" class="section section--gap">
   <h2 class="price-title text-uppercase font-size_2 title">Price list</h2>
-  <div class="price-box" aria-label="price-list">
-  </div>
+  <div class="price-box" aria-label="price-list"></div>
 </section>
 <script>
-  // let pricelist = "../components/assets/price-list/price-list.json";
   let pricelist = "/price-list/price-list.json";
-  // console.log("Извлечение из:", window.location.href + pricelist);
   fetch(pricelist)
     .then((response) => {
       if (!response.ok) {
@@ -19,13 +17,11 @@
     })
     .then((jsonData) => {
       let pricebox = document.querySelector(".price-box");
-      console.log(pricebox);
+
       for (let i = 0; i < jsonData.length; i++) {
-        console.log(jsonData[i].id);
-        // создали секцию
         const section = document.createElement("section");
         section.classList.add("price-box__item", `box-id${i}`);
-        // создали h3 со span
+
         const title = document.createElement("h3");
         title.classList.add("price-box__title", "font-size_3", "text-capitalize", "title--gold");
         title.textContent = jsonData[i].title;
@@ -35,7 +31,6 @@
         arrow.setAttribute("aria-hidden", "true");
         arrow.innerHTML = "&#9660;";
 
-        // создали dl и для него ...
         const dl = document.createElement("dl");
         dl.classList.add("price-list");
 
@@ -63,14 +58,13 @@
           price.classList.add("cost__price");
           price.textContent = services.cost.price;
 
-          // собираем секцию
           dl.appendChild(div);
           div.append(dt, dd);
           dd.appendChild(ul);
           ul.append(currency, price);
 
           const keys = Object.keys(services.cost);
-          const costNumber =  keys.length;
+          const costNumber = keys.length;
           if (costNumber > 1) {
             const specification = document.createElement("li");
             specification.classList.add("cost__specification");
@@ -99,7 +93,7 @@
 </script>
 
 <style>
-  .price-title  {
+  .price-title {
     margin-bottom: 28px;
   }
   .price-box {
@@ -108,51 +102,46 @@
     grid-template-columns: repeat(4, minmax(310px, 340px));
     grid-template-rows: repeat(3, auto);
     justify-content: space-between;
-    /* align-items: stretch; */
     row-gap: 40px;
-    column-gap: 20px; /* посчитать нужно */
-    grid-template-areas: 
-    "box-id0 box-id1 box-id3 box-id4"
-    "box-id0 box-id1 box-id2 box-id4"
-    "box-id5 box-id6 box-id7 box-id8"
+    column-gap: 20px;
+    grid-template-areas:
+      "box-id0 box-id1 box-id3 box-id4"
+      "box-id0 box-id1 box-id2 box-id4"
+      "box-id5 box-id6 box-id7 box-id8";
   }
   @media screen and (max-width: 1440px) {
-  .price-box {
-    grid-template-columns: repeat(3, minmax(310px, 340px));
-    grid-template-rows: repeat(4, auto);
-    grid-template-areas: 
-    "box-id0 box-id1 box-id3"
-    "box-id0 box-id1 box-id2"
-    "box-id4 box-id5 box-id6"
-    "box-id7 box-id8 ."; 
-  }    
+    .price-box {
+      grid-template-columns: repeat(3, minmax(310px, 340px));
+      grid-template-rows: repeat(4, auto);
+      grid-template-areas:
+        "box-id0 box-id1 box-id3"
+        "box-id0 box-id1 box-id2"
+        "box-id4 box-id5 box-id6"
+        "box-id7 box-id8 .";
+    }
   }
 
   @media screen and (max-width: 1040px) {
-  .price-box {
-    grid-template-columns: repeat(2, minmax(310px, 340px));
-    grid-template-rows: repeat(5, auto);
-    justify-content: space-around;
-    grid-template-areas: 
-    "box-id0 box-id1"
-    "box-id3 box-id4"
-    "box-id2 box-id4"
-    "box-id5 box-id6"
-    "box-id7 box-id8";
-  }    
+    .price-box {
+      grid-template-columns: repeat(2, minmax(310px, 340px));
+      grid-template-rows: repeat(5, auto);
+      justify-content: space-around;
+      grid-template-areas:
+        "box-id0 box-id1"
+        "box-id3 box-id4"
+        "box-id2 box-id4"
+        "box-id5 box-id6"
+        "box-id7 box-id8";
+    }
   }
 
   @media screen and (max-width: 700px) {
-  .price-box {
-    grid-template-columns: repeat(1, minmax(310px, 340px));
-    grid-template-rows: repeat(9, auto);/*50px */
-    row-gap: 0;
-    justify-content: center;
-    grid-template-areas: 
-    "box-id0" "box-id1" "box-id2" "box-id3" "box-id4" "box-id5" "box-id6" "box-id7" "box-id8";
-  }    
+    .price-box {
+      grid-template-columns: repeat(1, minmax(310px, 340px));
+      grid-template-rows: repeat(9, auto);
+      row-gap: 0;
+      justify-content: center;
+      grid-template-areas: "box-id0" "box-id1" "box-id2" "box-id3" "box-id4" "box-id5" "box-id6" "box-id7" "box-id8";
+    }
   }
-
-
-  
 </style>
