--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -46,8 +46,8 @@ const color = "white";
     }
 
     .footer-wrap {
-        max-width: inherit;
-        width: inherit;
+        /* max-width: inherit;
+        width: inherit; */
         display: flex;
         justify-content: space-between;
         align-items: start;
