--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -36,7 +36,7 @@ const NavLinks = [
 
 </nav>
 
-<script>
+<!-- <script>
     document.addEventListener("DOMContentLoaded", () => {  
         const background = document.querySelector('.background-nav') as HTMLElement | null;   
         const hamburger = document.querySelector('.hamburger') as HTMLElement | null;  
@@ -58,7 +58,7 @@ const NavLinks = [
             });  
         }  
     }); 
-</script>
+</script> -->
 
 
 <style>
@@ -88,6 +88,8 @@ const NavLinks = [
     .header-nav {
         max-width: 38.75rem;
         width: 100%;
+        
+        
     }
 
     .header-nav .nav-list {
